manifests/pingpong-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pingpong-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pingpong
  template:
    metadata:
      labels:
        app: pingpong
    spec:
      containers:
        - name: pingpong
          image: your-dockerhub-username/ping-pong:1.0
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: pingpong-service
spec:
  selector:
    app: pingpong
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
